fix(presences): Fix Parameter invisible

--- a/presences/src/main/resources/public/sass/global/components/_icons.scss
+++ b/presences/src/main/resources/public/sass/global/components/_icons.scss
@@ -139,7 +139,7 @@ i {
     content:"\F208";
   }
 
-  &.hidden:before {
+  &.invisible:before {
     font-family: 'material-icons';
     content:"\F6D0";
   }
